--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -35,9 +35,9 @@
 
 @section scripts
 {
-    <script src="/Scripts/typeahead.jquery.min.js"></script>
+    @*<script src="/Scripts/typeahead.jquery.min.js"></script>
     <script src="/Scripts/bloodhound.min.js"></script>
-    <link href="/Content/typeaheadjs.css" media="all" rel="stylesheet" />
+    <link href="/Content/typeaheadjs.css" media="all" rel="stylesheet" />*@
 }
 
 @section breadcrumb
@@ -49,6 +49,22 @@
     </ol>
 }
 
+<style>
+    .whisp {
+        width: 600px;
+        text-align: left;
+        background: white;
+        border-left: 2px grey solid;
+        border-top: 0px;
+        border-bottom: 1px grey dotted;
+        border-right: 0px grey solid;
+        padding-bottom: 2px;
+    }
+
+    #companies {
+        margin-bottom: 10px;
+    }
+</style>
 
 <h2>Porovnání K-indexu úřadů</h2>
 
@@ -57,7 +73,7 @@
     <p>Porovnání hodnot, které dohromady skládají výslednou známku K-indexu</p>
 
 </div>
-<input placeholder="Přidat úřad/firmu" type="text" name="addComparison" id="addComparison" class="form-control companyahead input-lg" onchange="FindCompany(this)" />
+<input placeholder="Přidat úřad/firmu" type="text" name="addComparison" id="addComparison" class="form-control companyahead input-lg" oninput="FindCompany(this)" />
 <div id="companies">
 
 </div>
@@ -72,11 +88,8 @@
                     <td>firma</td>
                     @foreach (var cmp in Model)
                     {
-                        <th style="text-align:right">
-                            @cmp.Jmeno
-                            <div class="small" style="font-family: Cabin, sans-serif;">
-                                <a href="@(removeSelfFromUrl(cmp.Ico))">odebrat</a>
-                            </div>
+                        <th style="text-align: right; width: 150px">
+                            <a href="@(removeSelfFromUrl(cmp.Ico))" style="color: red; float:left"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
                         </th>
                     }
                 
@@ -117,6 +130,16 @@
                     </tr>
                 }
 
+                <tr>
+                    <th>Součet</th>
+                    @foreach (var cmp in Model)
+                    {
+                        <td class="number" style="font-size: 15px; vertical-align: top;">
+                            @(cmp.ForYear(selectedYear)?.KIndex?.ToString("F2") ?? "Chybí K-index" )
+                        </td>
+                    }
+                </tr>
+
             </tbody>
         </table>
 
@@ -133,6 +156,7 @@
                 var button = $('<button/>',
                     {
                         text: comp.Name,
+                        class: 'whisp',
                         click: function () { AddCompany(comp.Ico); }
                     });
 
