--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -6,7 +6,6 @@
 @using System.Linq;
 @using System.Text.RegularExpressions;
 
-
 @{
 
     int selectedYear = ViewBag.SelectedYear;
@@ -19,10 +18,12 @@
 
     Statistics statistics = Statistics.GetStatistics(selectedYear);
 
+    string ukazatTxt = "ukázat detail";
+    string schovatTxt = "schovat detail";
     //decimal kindexValue = currYear.KIndex.Value; // currYear.KIndexVypocet.Radky.Sum(r => r.Hodnota * r.Koeficient);
 
     //kindexValue = 10.9m;
-    
+
 
     Func<string, string> removeSelfFromUrl = (input) =>
     {
@@ -85,14 +86,14 @@
         <table class="table table-no-border">
             <tbody>
                 <tr>
-                    <td>firma</td>
+                    <td style="width:290px">firma</td>
                     @foreach (var cmp in Model)
                     {
                         <th style="text-align: right; width: 150px">
                             <a href="@(removeSelfFromUrl(cmp.Ico))" style="color: red; float:left"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
                         </th>
                     }
-                
+
                 </tr>
                 <tr>
                     <th>Celková známka</th>
@@ -107,19 +108,30 @@
                 @foreach (KIndexData.KIndexParts velicina in Enum.GetValues(typeof(KIndexData.KIndexParts)))
                 {
                     <tr>
-                        <th>@velicina.ToNiceDisplayName()</th>
+                        <th>
+                            @velicina.ToNiceDisplayName()
+                            <small><a href="#detail_@((KIndexData.KIndexParts)velicina)" onclick="showHelp(this,'#detail_@(velicina)');return false;">@ukazatTxt</a></small>
+                            <div id="detail_@velicina" style="display:none">
+                                <div class="row">
+                                    <div class="col-xs-11 col-lg-offset-1 box-stats" style="background-color:#f9f9fe">
+                                        @(Html.Raw(KIndexData.PartsDescription(velicina)))
+                                    </div>
+                                </div>
+                            </div>
+                        </th>
+
                         @foreach (var cmp in Model)
                         {
                             var hodnota = cmp.ForYear(selectedYear)?
-                                    .KIndexVypocet?.Radky?
-                                    .Where(r => r.Velicina == (int)velicina)
-                                    .Select(r => r.Hodnota * r.Koeficient)
-                                    .FirstOrDefault();
+                                .KIndexVypocet?.Radky?
+                                .Where(r => r.Velicina == (int)velicina)
+                                .Select(r => r.Hodnota * r.Koeficient)
+                                .FirstOrDefault();
 
                             <td class="number" style="font-size: 15px; vertical-align: top;">
                                 @(hodnota?.ToString("F2") ?? "Chybí K-index")
-                                
-                                @if(hodnota.HasValue)
+
+                                @if (hodnota.HasValue)
                                 {
                                     <div class="small" style="font-family: Cabin, sans-serif;">
                                         @(statistics.PercIntervalShortText(velicina, hodnota.Value))
@@ -167,6 +179,18 @@
 
     function AddCompany(ico) {
         window.location.href = window.location.href + "," + ico;
+    }
+
+    function showHelp(btn, id) {
+        var visible = $(btn).text().includes('@ukazatTxt');
+        if (visible) {
+            $(id).show(300);
+            $(btn).text('@schovatTxt');
+        }
+        else {
+            $(id).hide(300);
+            $(btn).text('@ukazatTxt');
+        }
     }
 
 </script>
