--- a/Web.Statu/Views/Kindex/Detail.cshtml
+++ b/Web.Statu/Views/Kindex/Detail.cshtml
@@ -319,7 +319,7 @@ else
 
                                 if (kidx != null && kidx.KIndexAvailable && year != selectedYear)
                                 {
-                                    <span><a href="@ViewBag.ICO?rok=@year">@WebKidx.KIndexIconStyle(kidx.KIndexLabel, "padding-left:6px;width:22px") v @year</a>@(postfix)</span>
+                                    <span><a href="@ViewBag.ICO?rok=@year">@WebKidx.KIndexIconStyle(kidx.KIndexLabel, "padding-left:6px;height:18px") v @year</a>@(postfix)</span>
 
                                 }
                             }
