--- a/Web.Statu/Views/Kindex/Zebricek.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek.cshtml
@@ -11,12 +11,9 @@
     int selectedYear = ViewBag.SelectedYear;
 
 
-    //HlidacStatu.Lib.Data.Firma firma = HlidacStatu.Lib.Data.Firmy.Get(ViewBag.ICO);
-    ViewBag.Title = "žebříček";
-    //ViewBag.SubTitle = "pro " + firma.Jmeno;
+    ViewBag.Title = ViewBag.LadderTitle + " pro " + ViewBag.SelectedYear;
     ViewBag.HideTitle = true;
 
-    //Statistics statistics = Statistics.GetStatistics(selectedYear);
 
 }
 
@@ -51,48 +48,60 @@
     }
 </style>
 
-<h2>Žebříček</h2>
+<h2>@(ViewBag.LadderTitle) pro rok @ViewBag.SelectedYear</h2>
 
 
 <div class="row">
     <div class="col-sm-12">
-        
-        @for(int year = DateTime.Now.Year - 1; year > 2016; year--)
-        {
-            if(year != ViewBag.SelectedYear)
+        <h3 class="">
+            Žebříček pro další roky:
+            @for (int year = DateTime.Now.Year - 1; year > 2016; year--)
             {
-                <a href="@(ViewBag.SelectedLadder)?rok=@year">@year</a>
+                if (year != ViewBag.SelectedYear)
+                {
+                    <a style="padding-right:20px;" href="@(ViewBag.SelectedLadder)?rok=@year"><i class="fas fa-arrow-square-right"></i> @year</a>
+                }
+                else
+                {
+                    <span style="padding-right:20px;"><i class="far fa-arrow-square-right"></i> @year</span>
+                }
             }
-            else
-            {
-                <span>@year</span>
-            }
-        }
+        </h3>
+    </div>
+</div>
+<hr style="width:1px" />
+<div class="row" >
+    <div class="col-sm-12">
 
-        <table class="table table-no-border">
-            <tbody>
+        <table class="table table-striped table-dotted table-condensed table-hover">
+            <thead>
                 <tr>
-                    <td>Firma</td>
-                    <td>Známka</td>
-                    <td style="text-align: right;">Body</td>
+                    <th>Pořadí</th>
+                    <th>Známka</th>
+                    <th>Firma</th>
+                    <th style="text-align: right;">Body</th>
                     @*<td>Přidat do porovnání</td>*@
                 </tr>
-                @foreach(var record in Model)
+            </thead>
+            <tbody>
+                @foreach (var record in Model.Select((m, i) => new { rank = i + 1, item = m }))
                 {
                     <tr>
                         <td>
-                            <a href="/subjekt/@record.Ico">@record.Name</a>
+                            @(record.rank).
                         </td>
                         <td>
-                            <a href="/kindex/detail/@record.Ico?rok=@selectedYear">@(WebKidx.KIndexIconStyle(KIndexData.CalculateLabel(record.Value4Sort), "width:15px"))</a>
+                            <a href="/kindex/detail/@record.item.Ico?rok=@selectedYear">@(WebKidx.KIndexIconStyle(KIndexData.CalculateLabel(record.item.Value4Sort), "width:19px"))</a>
                         </td>
-                        <td style="text-align: right;">
-                            @(record.Value4Sort?.ToString("F2"))
+                        <td>
+                            <a href="/subjekt/@record.item.Ico">@record.item.Name</a>
+                        </td>
+                        <td class="number">
+                            @(record.item.Value4Sort?.ToString("F2"))
                         </td>
                         @*<td></td>*@
                     </tr>
                 }
-
             </tbody>
         </table>
 
