--- a/Web.Statu/Views/Kindex/Debug.Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Debug.Porovnat.cshtml
@@ -115,7 +115,7 @@ else
         <td>
             <span style="color:black">
                 <img src="@kival.KIndexLabelIconUrl()" style="width:25px" />
-                @HlidacStatu.Util.RenderData.NiceNumber(kival.KIndex.Value)
+                @HlidacStatu.Util.RenderData.NiceNumber(kival.KIndex)
             </span>
         </td>}
                 </tr>
